tdf#121659 DOCX import: fix lost column break at shapes

The column break was moved into the neighboring shape during
the first import, and eliminated during the second import,
losing the 2-column text layout. As a workaround, split the
paragraph moving the column break into a new paragraph.

Based on the patch written by Justin Luth.

Co-authored-by: Justin Luth and Tibor Nagy (NISZ)

Change-Id: Id4042a92b09aa55952bc0ea02319d5e588f77d3b